
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_activity_hours" />

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_activity_minutes" />

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomCalendarView"
        style="@style/CustomListItemStyle" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_description" />

    <AutoCompleteTextView
        android:id="@+id/locationAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_location" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_separator"
        android:layout_marginBottom="@dimen/margin_separator">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="@dimen/image_dim"
            android:layout_height="@dimen/image_dim"
            android:src="@drawable/image_holder"
            android:layout_marginRight="@dimen/margin_separator"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="@dimen/image_dim"
            android:layout_height="@dimen/image_dim"
            android:src="@drawable/image_holder" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:layout_gravity="center"/>

</LinearLayout>
