<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/CustomListItemStyle">

    <EditText
        android:id="@+id/activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_activity_hours" />

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_activity_minutes" />

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

       <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CustomCalendarView"
        style="@style/CustomListItemStyle" />


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        />

    <AutoCompleteTextView
        android:id="@+id/locationAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_activity_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_separator"
        android:layout_marginBottom="@dimen/margin_separator">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="@dimen/image_dim"
            android:layout_height="@dimen/image_dim"
            android:src="@drawable/image_holder"
            android:layout_marginRight="@dimen/margin_separator"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="@dimen/image_dim"
            android:layout_height="@dimen/image_dim"
            android:src="@drawable/image_holder" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_separator"/>
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSave"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_separator"/>

    </LinearLayout>

</LinearLayout>


